# django_eav

./: .pre-commit-config.yaml  manage.py  pyproject.toml
nocode/: asgi.py  settings.py  urls.py  wsgi.py
rest/: admin.py  models.py  serializer.py  views.py
rest/migrations/: 0001_initial.py  0002_attribute_entity_value_delete_column_delete_table.py  0003_entity_user_entity_unique_entity_per_user.py  0004_alter_value_boolean_value_alter_value_date_value_and_more.py  0005_alter_value_text_value.py
rest/models/: eav_typed_column.py
rest/serializer/: eavserializer.py  signserializer.py
rest/views/: eavviews.py  signviews.py
