[project]
name = "nocode-tool"
version = "0.1.0"
description = ""
authors = [
  {name = "ddiyoung", email = "wsw3998@sju.ac.kr"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django (>=5.1.6,<6.0.0)",
  "django-filter (>=25.1,<26.0)",
  "djangorestframework (>=3.15.2,<4.0.0)",
  "pytest-django (>=4.10.0,<5.0.0)",
  "ruff (>=0.9.6,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
